# model-Drift-Monitoring-and-Auto-Retraining

./: .env  .env.template  .gitignore  README.md  docker-compose.yml  test.py  test_pipeline.py
ml_pipelines/backend/: dockerfile  pyproject.toml  requirements.txt
ml_pipelines/backend/app/: config.py  database.py  main.py  model.py  tasks.py
ml_pipelines/backend/ml/: moitoring.py  monitoring.py  pipeline.py  reference.csv
ml_pipelines/dashboard/: Dockerfile  package.json
ml_pipelines/dashboard/public/: index.html
ml_pipelines/dashboard/src/: App.js
model_drift_shipping_pipeline/: .dockerignore  Dockerfile  pyproject.toml
model_drift_shipping_pipeline/.github/workflows/: ci-cd.yml
model_drift_shipping_pipeline/backend/: database.py  main.py  model.py  schemas.py  worker.py
model_drift_shipping_pipeline/data/: transform.ipynb
model_drift_shipping_pipeline/ml/: monitor.py  pipeline.py  train.py
model_drift_shipping_pipeline/sripts/: init_schema.sql
model_drift_shipping_pipeline/test/: test_run.py
