[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-drift-shipping-pipeline"
version = "0.1.0"
description = "Model drift shipping pipeline packages"

dependencies = [
    "fastapi~=0.109.0",
    "pydantic~=2.6.3",
    "sqlalchemy~=2.0.25",
    "pandas~=2.2.1",
    "xgboost~=2.0.3",
    "scikit-learn~=1.4.0",
    "mlflow~=2.11.3",
    "evidently~=0.4.16",
    "celery~=5.3.6",
    "redis~=5.0.3",
    "uvicorn~=0.28.0",
    "psycopg2-binary~=2.9.9",
    "websockets~=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pre-commit>=4.5.0",
    "ruff>=0.2.0",
]

[project.scripts]
run-server = "backend.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml", "data", "models", "backend"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
exclude = ["migrations"]
