[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-drift-retraining-pipeline"
version = "0.1.0"
description = "Production-grade MLOps platform featuring FastAPI serving, Celery workers, MLflow tracking, and Evidently AI drift monitoring."
readme = "../README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gokul Krishna" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Core dependencies for both your API and background worker instances
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.3",
    "mlflow>=2.11.3",
    "evidently>=0.4.16",
    "xgboost>=2.0.3",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.28",
    "pydantic>=2.6.4",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Dependencies specifically for development, automated testing, and CI/CD pipelines
dev = [
    "pytest>=8.1.1",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "httpx>=0.27.0", # Used for testing async FastAPI endpoints
]

[tool.setuptools]
packages = ["app", "ml"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]